--- a/index.html
+++ b/index.html
@@ -1262,15 +1262,16 @@
                         <div class="skills-card-item">
                             <h5>Competências Centrais</h5>
                             <ul>
-                                <li>Machine Learning</li>
                                 <li>Econometria</li>
+                                <li>Machine Learning</li>
                                 <li>Séries Temporais</li>
                                 <li>Inferência Causal</li>
-                                <li>Inteligência Artificial</li>
+                                <li>Criação de Aplicativos</li>
                                 <li>Análise de Dados</li>
                                 <li>Visualização de Dados</li>
                                 <li>ETL (Extract, Transform, Load)</li>
                                 <li>Pesquisa Científica</li>
+                                <li>Macroeconomia</li>
                                 <li>Elaboração de Relatórios Técnicos</li>
                                 <li>Modelagem Estatística</li>
                             </ul>
