--- a/index.html
+++ b/index.html
@@ -1199,13 +1199,14 @@
                             <h4 class="curriculum-item-title">Especialista em Regulação</h4>
                             <p class="curriculum-item-subtitle">Grupo Equatorial Energia - Brasília, DF</p>
                             <ul class="curriculum-item-list">
-                                <li>Responsável pela realização das projeções de consumo, faturamento, energia injetada e geração distribuída para as sete distribuidoras de energia do grupo Equatorial (MA, AP, PA, PI, AL, GO, RS), totalizando 189 projeções trimestrais.</li>
-                                <li>Implementação de ensemble models, conciliando modelos econométricos tradicionais com a versatilidade de modelos de machine learning e redes neurais, visando reduzir os desvios das projeções.</li>
-                                <li>Criação de relatórios interativos para monitorar os desvios das projeções.</li>
-                                <li>Elaboração de estudos de impacto causal no setor elétrico.</li>
-                                <li>Acompanhamento de indicadores macroeconômicos.</li>
-                                <li>Trabalho desenvolvido principalmente nas linguagens R, Python e SQL.</li>
-                                <li>Apresentação das projeções em reuniões corporativas.</li>
+                                <li>Responsável técnico pela implementação e consolidação do processo interno de projeções de energia consumida, faturada, injetada e de geração distribuída nas sete distribuidoras do Grupo Equatorial (MA, AP, PA, PI, AL, GO, RS), resultando em mais de 150 séries mensais projetadas por trimestre. A iniciativa promoveu maior autonomia técnica, redução de custos e da dependência de consultorias externas, além do estabelecimento de metas de erro em 2%.</li>
+                                <li>Estruturação, padronização e manutenção do repositório de projeções e dados realizados, com organização do acervo histórico e criação de banco de dados.</li>
+                                <li>Desenvolvimento de relatórios técnicos interativos em HTML para monitoramento contínuo dos desvios entre o projetado e o realizado, utilizando R, Python e SQL.</li>
+                                <li>Identificação de séries com maior nível de erro (MAPE) e aprimoramento com modelos mais robustos (ensemble models), combinando métodos econométricos, séries temporais, machine learning e redes neurais.</li>
+                                <li>Correção de sazonalidades e ruídos com base em evidências estatísticas, reaproveitando e ajustando insumos de consultorias anteriores.</li>
+                                <li>Realização de estudos especiais, aplicando métodos estatísticos avançados, incluindo inferência causal e abordagens econométricas.</li>
+                                <li>Apresentação periódica dos resultados e projeções em reuniões corporativas para diferentes áreas e níveis da empresa.</li>
+
                             </ul>
                         </div>
                         <div class="article-card curriculum-experience-card">
