--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,9 @@
                     <h1 class="hero-title">Silvio da Rosa Paula</h1>
                     <p class="hero-subtitle">Doutor em Economia Aplicada e Cientista de Dados</p>
                     <p class="hero-description">
-                        Com sólida experiência na aplicação de conhecimentos de economia e ciência de dados no mercado e em pesquisas científicas, desenvolvi expertise em Machine Learning, econometria e inferência causal. Minha paixão por métodos estatísticos aplicados é complementada pela fluência em R e Python, além de SQL, Power BI e outras ferramentas. Busco aplicar meus conhecimentos para contribuir significativamente na resolução de problemas e em tomadas de decisões estratégicas orientadas por dados.
+                        Tenho atuado com a aplicação de conhecimentos em Economia e Ciência de Dados em projetos do mercado e em pesquisas acadêmicas. Ao longo dessa trajetória, venho me dedicando ao uso de técnicas de Machine Learning, econometria e inferência causal para gerar insights e apoiar a tomada de decisão baseada em dados.
+                        Tenho familiaridade com linguagens como R e Python, além de SQL, Power BI e outras ferramentas que auxiliam na análise e visualização de dados. Gosto especialmente de explorar métodos estatísticos aplicados de forma prática e útil.
+                        Minha formação inclui graduação, mestrado e doutorado em Economia Aplicada, além de uma especialização em Inteligência Artificial e Machine Learning.
                     </p>
                     <div class="hero-buttons">
                         <a href="#" class="btn btn-primary" data-section="contact">
