--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,11 @@
                     <p class="hero-subtitle">Doutor em Economia Aplicada e Cientista de Dados</p>
                     <p class="hero-description">
                         Tenho atuado com a aplicação de conhecimentos em Economia e Ciência de Dados em projetos do mercado e em pesquisas acadêmicas. Ao longo dessa trajetória, venho me dedicando ao uso de técnicas de Machine Learning, econometria e inferência causal para gerar insights e apoiar a tomada de decisão baseada em dados.
-                        Tenho familiaridade com linguagens como R e Python, além de SQL, Power BI e outras ferramentas que auxiliam na análise e visualização de dados. Gosto especialmente de explorar métodos estatísticos aplicados de forma prática e útil.
+                    </p>
+                    <p class="hero-description">
+                        Possuo familiaridade com linguagens como R e Python, além de SQL, Power BI e outras ferramentas que auxiliam na análise e visualização de dados. Gosto especialmente de explorar métodos estatísticos aplicados de forma prática e útil.
+                    </p>
+                    <p class="hero-description">
                         Minha formação inclui graduação, mestrado e doutorado em Economia Aplicada, além de uma especialização em Inteligência Artificial e Machine Learning.
                     </p>
                     <div class="hero-buttons">
