--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
                             Conheça meu trabalho
                             <i class="fas fa-arrow-right"></i>
                         </a>
-                        <a href="https://github.com/silviopaula/silviopaula.github.io/blob/main/files/Carta%20de%20Apresenta%C3%A7%C3%A3o%20-%20Silvio%20da%20Rosa%20Paula%2C%20Ph.D_.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="margin-top: 10px;"> <i class="fas fa-file-alt"></i>
+                        <a href="https://github.com/silviopaula/silviopaula.github.io/raw/main/files/Carta%20de%20Apresenta%C3%A7%C3%A3o%20-%20Silvio%20da%20Rosa%20Paula%2C%20Ph.D_.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="margin-top: 10px;"> <i class="fas fa-file-alt"></i>
                             Ver Carta de Apresentação
                         </a>
                     </div>
