--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
                             Conheça meu trabalho
                             <i class="fas fa-arrow-right"></i>
                         </a>
-                        <a href="https://github.com/silviopaula/silviopaula.github.io/raw/main/files/Carta%20de%20Apresenta%C3%A7%C3%A3o%20-%20Silvio%20da%20Rosa%20Paula%2C%20Ph.D_.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="margin-top: 10px;"> <i class="fas fa-file-alt"></i>
+                        <a href="https://raw.githubusercontent.com/silviopaula/silviopaula.github.io/main/files/Carta%20de%20Apresenta%C3%A7%C3%A3o%20-%20Silvio%20da%20Rosa%20Paula.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="margin-top: 10px;"> <i class="fas fa-file-alt"></i>
                             Ver Carta de Apresentação
                         </a>
                     </div>
@@ -1192,7 +1192,7 @@
                         <i class="fas fa-download"></i>
                         Download CV Completo (PDF)
                     </a>
-                    <a href="https://github.com/silviopaula/silviopaula.github.io/raw/main/files/Carta%20de%20Apresenta%C3%A7%C3%A3o%20-%20Silvio%20da%20Rosa%20Paula%2C%20Ph.D_.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-cv-download" style="margin-top: 15px;">
+                    <a href="https://raw.githubusercontent.com/silviopaula/silviopaula.github.io/main/files/Carta%20de%20Apresenta%C3%A7%C3%A3o%20-%20Silvio%20da%20Rosa%20Paula.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-cv-download" style="margin-top: 15px;">
                         <i class="fas fa-file-alt"></i>
                         Download Carta de Apresentação (PDF)
                     </a>
