--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
                             Ver Currículo Detalhado
                             <i class="fas fa-arrow-right"></i>
                         </a>
-                        <a href="https://raw.githubusercontent.com/silviopaula/silviopaula.github.io/main/files/Carta%20de%20Apresenta%C3%A7%C3%A3o%20-%20Silvio%20da%20Rosa%20Paula.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="margin-top: 10px;"> <i class="fas fa-file-alt"></i>
+                        <a href="https://raw.githubusercontent.com/silviopaula/silviopaula.github.io/main/files/Silvio_da_Rosa_Paula_Carta_de_Apresentacao.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="margin-top: 10px;"> <i class="fas fa-file-alt"></i>
                             Ver Carta de Apresentação
                         </a>
                     </div>
@@ -1071,11 +1071,11 @@
                 </div>
                 
                 <div class="cv-download-button-container">
-                    <a href="https://github.com/silviopaula/silviopaula.github.io/raw/main/files/Silvio%20da%20Rosa%20Paula%20-%20Curriculo%20vitae.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-cv-download">
+                    <a href="https://github.com/silviopaula/silviopaula.github.io/raw/main/files/Silvio_da_Rosa_Paula_Curriculo.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-cv-download">
                         <i class="fas fa-download"></i>
                         Download CV Completo (PDF)
                     </a>
-                    <a href="https://raw.githubusercontent.com/silviopaula/silviopaula.github.io/main/files/Carta%20de%20Apresenta%C3%A7%C3%A3o%20-%20Silvio%20da%20Rosa%20Paula.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-cv-download" style="margin-top: 15px;">
+                    <a href="https://raw.githubusercontent.com/silviopaula/silviopaula.github.io/main/files/Silvio_da_Rosa_Paula_Carta_de_Apresentacao.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-cv-download" style="margin-top: 15px;">
                         <i class="fas fa-file-alt"></i>
                         Download Carta de Apresentação (PDF)
                     </a>
@@ -1713,7 +1713,7 @@
                         </div>
                         <div class="contact-item">
                             <div class="contact-icon"> <i class="fas fa-file-pdf"></i> </div>
-                            <div> <h4>Currículo Vitae</h4> <p><a href="https://github.com/silviopaula/silviopaula.github.io/raw/main/files/Silvio%20da%20Rosa%20Paula%20-%20Curriculo%20vitae.pdf" target="_blank" rel="noopener noreferrer">Download CV (PDF)</a></p> </div>
+                            <div> <h4>Currículo Vitae</h4> <p><a href="https://github.com/silviopaula/silviopaula.github.io/raw/main/files/Silvio_da_Rosa_Paula_Curriculo.pdf" target="_blank" rel="noopener noreferrer">Download CV (PDF)</a></p> </div>
                         </div>
                     </div>
                     </div>
