--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
                             <h3 class="curriculum-section-title">Experiência Profissional</h3>
                             <div class="curriculum-experience-list">
                                 <div class="article-card curriculum-experience-card">
-                                    <div class="article-year">ABR 2023 - PRESENTE</div>
+                                    <div class="article-year">ABR 2023 - JUL 2025</div>
                                     <h4 class="curriculum-item-title">Especialista em Regulação</h4>
                                     <p class="curriculum-item-subtitle">Grupo Equatorial Energia - Brasília, DF</p>
                         
